# hspec-learn

./: TAGS  hspec-learn.cabal
.stack-work/install/x86_64-osx/lts-5.17/7.10.3/flag-cache/: hspec-learn-0.1.0.0
.stack-work/install/x86_64-osx/lts-5.18/7.10.3/pkgdb/: hspec-learn-0.1.0.0-54602eeae71f06e3ac1851948be9c8ed.conf  package.cache
src/: .Lib.hs.swp  Lib.hs  Main.hs  quickcheck.hs
test/: .Main.hs.swp  Main.hs
