name:                hspec-learn
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hspec-learn#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends:   base >= 4.7 && < 5
  default-language: Haskell2010

test-suite hspec-test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends:  base
                , hspec-learn
                , hspec

executable hspec-learn
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
